# porescene

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data/: img_bin.raw  img_seg.raw  map_vars.json  pnm.mat
docs/: requirements.in  requirements.txt
docs/script/concept/: axis_layout.py
docs/script/example/: network_coordination_number.py  network_morphology.py  network_random.py  network_topology.py  segmentation.py  solid.py
docs/source/: concepts.rst  conf.py  config.rst  examples.rst  index.rst  installation.rst  publications.rst  references.bib
docs/source/_ext/: apa7_names.py  apa7_style.py  colormap_strips.py
docs/source/_static/: carousel.css  carousel.js  copybutton.js  porescene.css  references.js
docs/source/_templates/sidebar/: home-link.html
docs/source/api/: modules.rst  porescene.color.conversion.rst  porescene.color.gradient.rst  porescene.color.palette.fefa.rst  porescene.color.palette.rst  porescene.color.rst  porescene.config.rst  porescene.image.rst  porescene.io.rst  porescene.layout.rst  porescene.model.rst  porescene.rst  porescene.scene.rst  porescene.utility.rst  porescene.worker.rst
docs/source/examples/: network_coordination_number.rst  network_morphology.rst  network_random.rst  network_structure.rst  network_topology.rst  segmentation.rst  solid.rst
example/: axes.py  example_img_trim.py  example_network.py  example_overlay.py  example_scene_axes.py  example_single_cluster.py  example_solid.py  network_coordination_number.py  network_morphology.py  network_random.py  network_structure.py  network_topology.py  segmentation.py  solid.py  test_load_hd5.py
src/porescene/: __init__.py  config.py  image.py  io.py  layout.py  model.py  scene.py  utility.py  worker.py
src/porescene/color/: __init__.py  _color.py  _types.py  conversion.py  gradient.py  palette.py
src/porescene/color/palette/: __init__.py  _inferno.py  _magma.py  _palette.py  _plasma.py  _viridis.py  fefa.py
src/porescene/data/colormap/: Accent.txt  Blues.txt  BrBG.txt  BuGn.txt  BuPu.txt  Dark2.txt  GnBu.txt  Greens.txt  Greys.txt  LICENSE_colorbrewer.txt  LICENSE_colorcet.txt  LICENSE_matplotlib.txt  LICENSE_turbo.txt  OrRd.txt  Oranges.txt  PRGn.txt  Paired.txt  Pastel1.txt  Pastel2.txt  PiYG.txt  PuBu.txt  PuBuGn.txt  PuOr.txt  PuRd.txt  Purples.txt  README.txt  RdBu.txt  RdGy.txt  RdPu.txt  RdYlBu.txt  RdYlGn.txt  Reds.txt  Set1.txt  Set2.txt  Set3.txt  Spectral.txt  YlGn.txt  YlGnBu.txt  YlOrBr.txt  YlOrRd.txt  (+48 more)
test/: test_color.py
