[project]
name = "porescene"
version = "0.2.0"
description = "Blender-based Python toolkit for reproducible, publication-quality 3D visualization of porous media – tomographic images, pore networks, and tessellations."
authors = [{ name = "Felix Faber", email = "felix.faber@ovgu.de" }]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = "==3.13.*"
dependencies = [
    "bpy",
    "numpy",
    "rich",
    "h5py",
    "pillow",
    "resvg-py (>=0.3.3,<0.4.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
]

[project.urls]
repository = "https://github.com/fefafe/porescene"
documentation = "https://porescene.readthedocs.io"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fake-bpy-module (>=20260501,<20260502)",
    "pytest (>=9.1.1,<10.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "furo (>=2025.12.19,<2026.0.0)",
    "sphinx-autodoc-typehints (>=3.12.1,<4.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "pygments-styles (>=0.3.0,<0.4.0)",
    "pip-tools (>=7.6.0,<8.0.0)",
    "sphinxcontrib-bibtex (>=2.7.0,<3.0.0)",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
